--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             <div class="input-section">
                 <label for="url-input"><i class="fas fa-link"></i> Entrez une URL ou un texte :</label>
                 <input type="text" id="url-input" placeholder="https://exemple.com" autofocus>
+                <div class="logo-input-container">
+                    <label for="logo-input"><i class="fas fa-image"></i> Ajouter un logo (optionnel)</label>
+                    <div class="file-input-wrapper">
+                        <input type="file" id="logo-input" accept="image/*">
+                    </div>
+                </div>
                 <div class="button-container">
                     <button id="generate-btn"><i class="fas fa-magic"></i> Générer QR Code</button>
                 </div>
